--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.15.1",
     "react-particles": "^2.12.2",
     "styled-components": "^6.1.15",
     "swiper": "^11.2.4"
