--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-particles": "^2.12.2",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.15",
     "swiper": "^11.2.4"
   },
